# effective-parakeet

./: .gitmodules  CMakeLists.txt  README.md
DemoSink/: CMakeLists.txt
DemoSink/src/: SimpleUdpTransport.cpp  SimpleUdpTransport.h  main.cpp
DemoSink/src/ui/: MainWindow.cpp  MainWindow.h
DemoSink/src/vp8/: VP8PacketCodecFactory.cpp  VP8PacketCodecFactory.h  VP8PacketReconstructor.cpp  VP8PacketReconstructor.h
RtpPacketizationInterface/: CMakeLists.txt
RtpPacketizationInterface/include/RtpPacketization/: EncodedFrame.h  EncodedVideoFrame.h  PacketizedData.h  PayloadDescriptor.h  PayloadRegistry.h  PayloadTypeFactory.h  RtpDataReceiver.h  StreamReconstructor.h
RtpPacketizationInterface/src/: PayloadRegistry.cpp  RtpDataReceiver.cpp  StreamReconstructor.cpp
RtpRtcp/: CMakeLists.txt
RtpRtcp/include/RtpRtcp/: Extension.h  Frame.h  PacketizedData.h  PayloadRegistry.h  RtcpPacket.h  RtpPacket.h  Session.h  SinkStream.h  Stream.h  Transport.h
RtpRtcp/include/RtpRtcp/rtcp/: Payload.h  SenderReport.h  SourceDescription.h
RtpRtcp/src/: BufferNetworkHelper.h  Extension.cpp  PayloadRegistry.cpp  RtcpPacket.cpp  RtpPacket.cpp  RtpVideoSink.cpp  RtpVideoSink.h  Session.cpp  SinkStream.cpp  Stream.cpp  Transport.cpp
RtpRtcp/src/rtcp/: Payload.cpp  SenderReport.cpp  SourceDescription.cpp
RtpTransportInterface/: CMakeLists.txt
RtpTransportInterface/include/RtpTransport/: State.h  Transport.h
RtpTransportInterface/src/: Transport.cpp
